...

    var body: some View {
        Button {
            viewModel.toggleNotificationList()
        } label: {
            Label {
                Text("Notifications")
            } icon: {
                Image(systemSymbol: store.unreadNotificationCount > 0 ? .bellBadge : .bell)
                    .font(.system(size: 13, weight: .semibold))
            }
        }
        .tint(.secondary)
...

    var body: some View {
        Button {
            viewModel.showSaveDeskPresetPanel()
        } label: {
            Label {
                Text("Save Desk as Preset")
            } icon: {
                Image(systemSymbol: .bookmark)
                    .font(.system(size: 13, weight: .semibold))
            }
        }
        .tint(.secondary)
...
